--- a/.github/workflows/slack-test.yml
+++ b/.github/workflows/slack-test.yml
@@ -1,23 +1,28 @@
-on: release
+on: 
+  release:
+    types: [created]
 name: Slack Notification Demo
 jobs:
   slackNotification:
     name: Slack Notification
     runs-on: ubuntu-latest
     steps:
-    - name: Get release
+      - name: Checkout repository
+        uses: actions/checkout@v2
+    
+      - name: Get release
         id: get_release
         uses: bruceadams/get-release@v1.2.3
         env:
           GITHUB_TOKEN: ${{ github.token }}
 
-    - uses: actions/checkout@v2
-    - name: Slack Notification
-      uses: rtCamp/action-slack-notify@v2
-      env:
-        SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK }}
-        SLACK_CHANNEL: demand
-        SLACK_USERNAME: Pages
-        SLACK_TITLE: Release
-        SLACK_MESSAGE: ':rocket: Pages `${{ steps.get_release.outputs.name }}` released!'
-        MSG_MINIMAL: true
+    
+      - name: Slack Notification
+        uses: rtCamp/action-slack-notify@v2
+        env:
+          SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK }}
+          SLACK_CHANNEL: demand
+          SLACK_USERNAME: Pages
+          SLACK_TITLE: Release
+          SLACK_MESSAGE: ':rocket: Pages `${{ steps.get_release.outputs.name }}` released!'
+          MSG_MINIMAL: true
