--- a/.github/workflows/slack-test2.yml
+++ b/.github/workflows/slack-test2.yml
@@ -25,6 +25,7 @@ jobs:
               "channel": "demand",
               "username": "Release Announcer",
               "as_user": false,
+              "icon_url": "https://ih1.redbubble.net/image.781007202.8647/st,small,845x845-pad,1000x1000,f8f8f8.jpg"
               "blocks": [
                 {
                   "type": "section",
