--- a/.github/workflows/slack-test3.yml
+++ b/.github/workflows/slack-test3.yml
@@ -40,3 +40,6 @@ jobs:
         env:
           SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK }}
           SLACK_WEBHOOK_TYPE: INCOMING_WEBHOOK
+
+      - name: Check
+        run: echo "Data"
