--- a/.github/workflows/slack-test2.yml
+++ b/.github/workflows/slack-test2.yml
@@ -45,7 +45,7 @@ jobs:
                   "type": "section",
                   "text": {
                     "type": "mrkdwn",
-                    "text": ${{ join(["```", toJSON(steps.get_release.outputs.body), "```") }}
+                    "text": ${{ join(["```", toJSON(steps.get_release.outputs.body), "```"]) }}
                   }
                 },
                 {
