--- a/.github/workflows/slack-test2.yml
+++ b/.github/workflows/slack-test2.yml
@@ -45,21 +45,7 @@ jobs:
                   "type": "section",
                   "text": {
                     "type": "mrkdwn",
-                    "text": "```"
-                  }
-                },
-                {
-                  "type": "section",
-                  "text": {
-                    "type": "mrkdwn",
-                    "text": ${{ toJSON(steps.get_release.outputs.body) }}
-                  }
-                },
-                {
-                  "type": "section",
-                  "text": {
-                    "type": "mrkdwn",
-                    "text": "```"
+                    "text": '```${{ toJSON(steps.get_release.outputs.body) }}```'
                   }
                 },
                 {
