--- a/.github/workflows/slack-test2.yml
+++ b/.github/workflows/slack-test2.yml
@@ -56,7 +56,7 @@ jobs:
                   "elements": [
                     {
                       "type": "mrkdwn",
-                      "text": "By ${{ steps.get_release.outputs.author.login }}"
+                      "text": "By ${{ fromJSON(steps.get_release.outputs.author).login }}"
                     }
                   ]
                 }
