--- a/.github/workflows/slack-notification.yml
+++ b/.github/workflows/slack-notification.yml
@@ -17,7 +17,7 @@ jobs:
           GITHUB_TOKEN: ${{ github.token }}
           
       - name: Set Body
-        run: body=${{ toJSON( echo steps.get_release.outputs.body | sed -r 's/^.{1,1}(["`]).{1,1}$/\\\1/g' ) }} && echo "RELEASE_BODY=\`\`\`$body\`\`\`" >> $GITHUB_ENV
+        run:  body=${{ toJSON(steps.get_release.outputs.body) }} && body=$(echo body | sed -r 's/^.{1,1}(["`]).{1,1}$/\\\1/g') && echo "RELEASE_BODY=\`\`\`$body\`\`\`" >> $GITHUB_ENV
 
     
       - name: Slack Notification
