--- a/.github/workflows/slack-notification.yml
+++ b/.github/workflows/slack-notification.yml
@@ -17,7 +17,7 @@ jobs:
           GITHUB_TOKEN: ${{ github.token }}
           
       - name: Set Body
-        run:  body=${{ toJSON(steps.get_release.outputs.body) }} && body=$(cat <<< $body | sed -r 's/(["`])/\\\1/g') && echo "RELEASE_BODY=\`\`\`$body\`\`\`" >> $GITHUB_ENV
+        run:  body=$(sed -r 's/(["`])/\\\1/g' <<< ${{ toJSON(steps.get_release.outputs.body) }}) && echo "RELEASE_BODY=\`\`\`$body\`\`\`" >> $GITHUB_ENV
 
     
       - name: Slack Notification
