--- a/.github/workflows/slack-notification.yml
+++ b/.github/workflows/slack-notification.yml
@@ -7,6 +7,11 @@ jobs:
     name: Slack Notification
     runs-on: ubuntu-latest
     steps:
+      - name: Setup Deno
+        uses: denoland/setup-deno@v1.1.0
+        with:
+          deno-version: v1.x
+    
       - name: Checkout repository
         uses: actions/checkout@v2
     
@@ -16,8 +21,8 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ github.token }}
           
-      - name: Set Body
-        run:  body=${{ toJSON(steps.get_release.outputs.body) }} && body=$(echo $body | sed -r 's/(["])/\\\1/g') && echo "RELEASE_BODY=\`\`\`$body\`\`\`" >> $GITHUB_ENV
+      - name: Parse release body
+        run:  raw=${{ toJSON(steps.get_release.outputs.body) }} && body=$(deno run ./.github/workflows/notification/release-body-parser.js $raw) && echo "RELEASE_BODY=\`\`\`$body\`\`\`" >> $GITHUB_ENV
 
     
       - name: Slack Notification
