--- a/.github/workflows/slack-notification.yml
+++ b/.github/workflows/slack-notification.yml
@@ -22,7 +22,7 @@ jobs:
           GITHUB_TOKEN: ${{ github.token }}
           
       - name: Parse release body
-        run:  raw=${{ steps.get_release.outputs.body }} && body=$(deno run ./.github/workflows/notification/release-body-parser.js $raw) && echo "RELEASE_BODY=\`\`\`$body\`\`\`" >> $GITHUB_ENV
+        run:  touch tmp && cat ${{ steps.get_release.outputs.body }} >> tmp && body=$(deno run ./.github/workflows/notification/release-body-parser.js tmp) && echo "RELEASE_BODY=\`\`\`$body\`\`\`" >> $GITHUB_ENV
     
       - name: Slack Notification
         uses: slackapi/slack-github-action@v1.18.0
