--- a/.github/workflows/slack-notification-thread.yml
+++ b/.github/workflows/slack-notification-thread.yml
@@ -4,27 +4,27 @@ on:
 name: Slack Notification
 jobs:
   slackNotification:
-    name: :rocket: Slack Notification
+    name: 🚀 Slack Notification
     runs-on: ubuntu-latest
     steps:    
-      - name: :arrow_heading_down: Checkout repository
+      - name: ⬇️ Checkout repository
         uses: actions/checkout@v2
     
-      - name: :recycle: Get release
+      - name: ♻️ Get release
         id: get_release
         uses: bruceadams/get-release@v1.2.3
         env:
           GITHUB_TOKEN: ${{ github.token }}
           
-      - name: :arrows_counterclockwise: Parse release body
+      - name: 🔄 Parse release body
         run:  echo "RELEASE_BODY=\`\`\`$( echo '${{ toJSON(steps.get_release.outputs.body) }}' | sed -r 's/(")(.*)(")/\2/g' )\`\`\`" >> $GITHUB_ENV
         
-      - name: :arrow_right: Slack Notification - Header message
+      - name: ➡️ Slack Notification - Header message
         uses: slackapi/slack-github-action@v1.19.0
         id: header-message
         with:
           channel-id: C0368182PKR
-          icon_emoji: :rocket:
+          icon_emoji: ":rocket:"
           as_user: false
           payload: |
             {
