--- a/.github/workflows/slack-notification-thread.yml
+++ b/.github/workflows/slack-notification-thread.yml
@@ -24,8 +24,10 @@ jobs:
         id: header-message
         with:
           channel-id: C0368182PKR
+          username: Release Announcer
           icon_url: https://a.slack-edge.com/production-standard-emoji-assets/13.0/google-large/1f680.png
           as_user: false
+          unfurl_links: false
           payload: |
             {
               "blocks": [
@@ -74,8 +76,10 @@ jobs:
         id: thread-message
         with:
           channel-id: C0368182PKR
+          username: Release Announcer
           icon_url: https://a.slack-edge.com/production-standard-emoji-assets/13.0/google-large/1f680.png
           as_user: false
+          unfurl_links: false
           payload: |
             {
               "blocks": [
