--- a/.github/workflows/slack-notification-thread-2.yml
+++ b/.github/workflows/slack-notification-thread-2.yml
@@ -72,7 +72,7 @@ jobs:
               ] 
               
       - name: Debug
-        run: echo ${{ steps.header-message.outputs.slack-result }}
+        run: echo "${{ steps.header-message.outputs.slack-result }}"
           
       - name: Slack Notification - Thread message
         uses: archive/github-actions-slack@v2.4.0
