--- a/.github/workflows/slack-notification-thread-2.yml
+++ b/.github/workflows/slack-notification-thread-2.yml
@@ -32,7 +32,7 @@ jobs:
           slack-optional-unfurl_links: false
           slack-optional-unfurl_media: false
           slack-text: "Default message"
-          slack-blocks: |
+          slack-optional-blocks: |
             [
                 {
                   "type": "section",
@@ -88,7 +88,7 @@ jobs:
           slack-optional-unfurl_media: false
           slack-optional-thread_ts: ${{ fromJson(steps.header-message.outputs.slack-result).response.message.ts }}
           slack-text: "Something"
-          slack-blocks: |
+          slack-optional-blocks: |
             {
               "blocks": [
                 {
